src/styles/index.css
body {
  background-color: #F7EDE2;
}

.color2 {
  background-color: #F6BD60;
}

.color3 {
  background-color: #F5CAC3;
}


.color5 {
  background-color: #F28482;
}

.container {
  padding: 0 2rem;
}

.cards{
  flex-wrap: wrap;
  flex-direction: row;
}

h1 {
  text-align: right;
  color: #8d5857;
}

p {
  color: #8d5857
}

a:hover {
  color: #8d5857 !important;
}

a {
  color: #F6BD60;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.paragraphFont {
  color: #8d5857;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 400px;
  margin: 0 auto;
}

.main {
  min-height: 100vh;
  padding: 4rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.title,
.description {
  text-align: center;
}

.description {
  margin: 4rem 0;
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.card {
  margin: .5rem;
  padding: 1rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  max-width: 300px;
}

.card:hover,
.card:focus,
.card:active {
  color: #F28482;
  border-color: #F28482;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
  color: #F28482;
}

.card .card-body .btn {
  display: block;
  margin:1rem auto;
  color: #fffdfa;
}

.card .card-title {
  text-align: center;
  color: #8d5857;
}

.btn-primary {
  background-color:#F5CAC3;
  border-color: black;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
  background-color: #8d5857 !important;
}


.navbar {
  position: fixed;
  z-index: 1000;
  background-color: #F7EDE2;
  color:#8d5857;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

#main {
  padding-top: 4rem;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

@media (prefers-color-scheme: dark) {
  .card,
  .footer {
    border-color: #222;
  }
  .code {
    background: #111;
  }
  .logo img {
    filter: invert(1);
  }
}

